--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,25 +4,17 @@ server:
     include-binding-errors: always
 
 spring:
-  datasource:
-    password:
-    url: jdbc:postgresql://localhost:5432/registration
-    username:
+  profiles:
+    active: dev
   jpa:
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
 
   mail:
-    host: localhost
-    port: 1025
-    username: hello
-    password: hello
-
     properties:
       mail:
         smtp:
